2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/TimePeriodValue.java
    (toString): New method override,
    * source/org/jfree/data/time/TimePeriodValues.java
    (updateBounds): Update maxMiddleIndex correctly.
    
2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/Week.java
    (Week(Date, TimeZone)): Hand on the zone.
    
2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/SimpleTimePeriod.java
    (start): Changed from Date to long,
    (end): Likewise,
    (getStartMillis): New method,
    (getEndMillis): Likewise,
    (getStart): Returns new date instance,
    (getEnd): Likewise.

2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1864222:
    * source/org/jfree/data/time/TimeSeries.java
    (createCopy(RegularTimePeriod, RegularTimePeriod)): Handle empty range.
    
2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/FixedMillisecond.java
    (time): Changed from Date to long.

2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/DateRange.java
    (lowerDate): Changed from Date to long,
    (upperDate): Likewise,
    (DateRange(Date, Date)): Updated for field type change,
    (DateRange(long, long)): Likewise,
    (getLowerDate): Likewise,
    (getUpperDate): Likewise,
    (toString): Likewise.

2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/axis/DateTickUnit.java
    (addToDate(Date)): Deprecated.

2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/imagemap/DynamicDriveToolTipTagFragmentGenerator.java
    (generateToolTipFragment): Escape text,
    * source/org/jfree/chart/imagemap/OverLIBToolTipTagFragmentGenerator.java
    (generateToolTipFragment): Likewise,